Bug 599590 - Attrib.value can return empty for case-sensitive attributes after calling removeAttribute, r=sicking, a=jst